# kubectl-spy

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: build.yml
kubernetes/: README.md  another-secret.yaml  database-secret.yaml  empty-secret.yaml
scripts/: end-to-end-test.sh
src/: index.js  kubectl-spy.js  kubernetes.rs  main.rs
src/base64/: index.js
src/kubernetes/: index.js
