[package]
name = "kubectl-spy"
version = "0.1.0"
authors = ["Eric Lemieux <eric@lemieuxdev.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = {version= "0.87.2", features=["derive", "runtime"]}
kube-runtime = "0.87.1"
k8s-openapi = {version = "0.20.0", features = ["v1_24"] }

tokio = { version = "1", features = ["full"] }

serde = "1.0.196"
serde_json = "1.0.113"

clap = { version = "4.5.0", features = ["derive"] }
